--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,10 +4,10 @@
 
 .page-enter-active,
 .page-leave-active {
-  @apply transition-opacity duration-200 ease-in-out;
+  @apply transition-all duration-200;
 }
 
 .page-enter-from,
 .page-leave-to {
-  @apply opacity-0;
+  @apply opacity-0 blur-lg;
 }
